--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,11 @@ buildNumber.properties
 .project
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
+
+# IntelliJ Idea
+out/
+.idea/
+.idea_modules/
+*.iml
+*.ipr
+*.iws
